# ClipboardPlus

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  README.zh.md  build_windows.cmd
.github/workflows/: ci.yml  release.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
clipboard-plus/: .gitignore  index.html  package-lock.json  package.json
clipboard-plus/.github/workflows/: release.yml
clipboard-plus/electron/: main.cjs  preload.cjs
clipboard-plus/src/: App.css  App.tsx  types.ts
clipboard-plus/src/components/: DetailPanel.tsx  EntryItem.tsx  EntryList.tsx  SearchBar.tsx  SettingsDialog.tsx  Sidebar.tsx  Toast.tsx
clipboard-plus/src/hooks/: useHistory.ts  useSettings.ts
clipboard-plus/src/i18n/: en.ts  index.ts  zh.ts
docs/: ANDROID.md  BUILD.md
scripts/: build_desktop.sh
secondbrain-electron/: index.html  package-lock.json  package.json
secondbrain-electron/electron/: main.cjs  preload.cjs
secondbrain-electron/src/: App.css  App.tsx  index.css  types.ts
secondbrain-electron/src/components/: Editor.tsx  Preview.tsx  SearchBar.tsx  Sidebar.tsx
src/: main.c
src/core/: filemgr.c  filemgr.h  filemgr_win_compat.h  graph.c  graph.h  markdown.c  markdown.h  note.c  note.h  rtext_extra.c  rtext_extra.h
src/ui/: theme.c  theme.h  ui.c  ui.h
